# kubeidea

./: .gitignore  404.html  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/agents/: flet-ui.agent.md  python-poetry.agent.md
.github/workflows/: ci.yml  docs.yml  release.yml
architecture/: index.html
contributing/: index.html
development/: index.html
docs/: architecture.md  contributing.md  development.md  explorer.md  getting-started.md  index.md  plugins.md  roadmap.md  security.md
docs/stylesheets/: extra.css
explorer/: index.html
flatpak/: io.github.ops_talks.KubeIdea.yml
getting-started/: index.html
plugins/: README.md  index.html
roadmap/: index.html
search/: search_index.json
security/: index.html
src/: main.py
src/kubeidea/: __init__.py  app.py
src/kubeidea/config/: __init__.py  settings.py
src/kubeidea/core/: __init__.py  context.py
src/kubeidea/kube/: __init__.py  client.py  models.py  resources.py
src/kubeidea/metrics/: __init__.py  prometheus.py  server.py
src/kubeidea/plugins/: __init__.py  host.py
src/kubeidea/security/: __init__.py  rbac.py
src/kubeidea/ui/: __init__.py  navigation.py  theme.py
src/kubeidea/ui/views/: _explorer_detail.py  _explorer_rows.py  clusters.py  explorer.py  home.py  placeholder.py  settings.py
src/kubeidea/utils/: __init__.py  logging.py
tests/: __init__.py  test_context.py  test_kube_client.py  test_logging.py  test_metrics.py  test_plugins.py  test_resources.py  test_settings.py  test_settings_view.py
