[project]
name = "kube-idea"
version = "0.1.0"
description = "Kubernetes desktop IDE built with Python (Flet + Poetry)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Equipe Kube-IDEA", email = "dev@example.com" },
]
dependencies = [
    # Kubernetes API client (sync); consider kubernetes-asyncio for async flows
    "kubernetes>=31.0.0,<32",
    # UI framework powered by Flutter
    "flet>=0.25.0,<1",
    # YAML, schema validation, and data models
    "pyyaml>=6.0,<7",
    "pydantic>=2.6,<3",
    # HTTP client for custom adapters (e.g., Prometheus)
    "httpx>=0.27.0,<1",
]

[project.entry-points."kubeidea.plugins"]
# Third-party plugins register here, e.g.: "keda" = "kubeidea_keda:Plugin"

[tool.poetry]
packages = [{ include = "kubeidea", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"
mypy = "^1.9.0"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["kubeidea"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["kubernetes.*", "flet.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
